Titel, Untertitel, Projekte benannt (manche beschrieben), Über mich angekratzt, Hauptfarbe zu lila geändert

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -29,7 +29,7 @@
               </li>
               {% endif %}
               {% if post.project-date %}
-              <li>Datum:
+              <li> Release:
                 <strong>{{ post.project-date }}</strong>
               </li>
               {% endif %}
