Fußleiste cleaned, About me geschrieben und mit Arbeiten geswitcht, Copyright hinzugefügt

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,12 +9,21 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>2002 in der Südpfalz geboren, bin ich schon mein ganzes Leben lang künstlerisch unterwegs. Mit zunehmendem Alter auch immer professioneller.
+        <p>2002 in der schönen Südpfalz geboren und dort aufgewachsen, bin ich schon mein ganzes Leben künstlerisch tätig. 
+          Schon in meiner Kindheit stand ich auf der Bühne und hab seit Schultagen Geschichten geschrieben. <br>
+          <br>
+          Mit den Jahren entdeckte ich auch das Malen – und meine große Liebe zum Schauspiel und Sprechen. 
+          Mit Robin Kattner, einem guten Freund, produziere ich seit bald 13 Jahren Filme, für welche Ich meist auch die Drehbücher schreibe.
+          In den letzten Jahren hab ich immer mehr Sprech-Projekte umgesetzt und Erfahrung gesammelt.          
         </p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+        <p>Heute vertone ich verschiedene Projekte und entwickle mich als Sprecher immer weiter. 
+          Ob Erzählungen, Synchronisation oder kreative Voice-Over – ich liebe es, mit meiner Stimme Atmosphäre zu schaffen. <br>
+          Mir Geschichten auszudenken, aufzuschreiben und zum Leben zu erwecken, verschiedene Emotionen durch mein Spiel zu transportieren – das ist es, was mich fasziniert. <br>
+          <br>
+          Mein Heimstudio besteht aus dem „Røde NT-USB Mini“ und dem Schnittprogramm „Audacity“.
+          </p>
       </div>
     </div>
   </div>
