--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,7 +22,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="email">Email Address</label>
+              <label for="email">Email Addresse</label>
               <input type="email" class="form-control" placeholder="Email Address" id="email" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
@@ -38,7 +38,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="message">Message</label>
+              <label for="message">Nachricht</label>
               <textarea rows="5" class="form-control" placeholder="Message" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
@@ -48,7 +48,7 @@
           <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-success btn-lg">Send</button>
+              <button type="submit" class="btn btn-success btn-lg">Senden</button>
             </div>
           </div>
         </form>
