--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -21,7 +21,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Addresse</label>
-              <input type="email" name="_replyto" class="form-control" placeholder="Email Address" id="email" required
+              <input type="email" name="_replyto" class="form-control" placeholder="Email Addresse" id="email" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
@@ -33,7 +33,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Nachricht</label>
-              <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required
+              <textarea rows="5" name="message" class="form-control" placeholder="Nachricht" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
