--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -13,7 +13,13 @@
         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
+              <!-- <i class="fa fa-search-plus fa-3x"></i> -->
+              {% if post.type == "Film" %}
+              <img src="img/film_icon.png" alt="Audio" width="50" height="50">
+              {% else %}
+              <img src="img/mic_icon.png" alt="Video" width="50" height="50">
+              {% endif %}
+            
             </div>
           </div>
           <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
